# ppmi-scraper

./: .gitignore  LICENSE  MANIFEST.in  README.md  build-mapping.py  conftest.py  pyproject.toml  requirements.txt  scrap.py  setup.py
.github/workflows/: main.yml  python-app.yml  tests.yml
ppmi_downloader/: __init__.py  file_id.json  guessed_to_real.json  ppmi_crawler.py  ppmi_downloader.py  ppmi_logger.py  ppmi_navigator.py  selenium_grid_utils.py  study_data_to_checkbox_id.json  test_download_metadata.py  utils.py
ppmi_downloader/tests/: test_ppmi_downloader.py
ppmi_metadata/: __init__.py  ppmi_metadata.py
