[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppmi_downloader"
version = "0.5.1"
description = "A downloader of PPMI files."
authors = [{ name = "Tristan Glatard", email = "tristan.glatard@concordia.ca" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
license = { file = "LICENSE" }
dependencies = [
    "webdriver_manager==3.8.3",
    "selenium==4.5.0",
    "icecream==2.1.3",
    "tqdm==4.57.0",
    "beautifulsoup4==4.10.0",
    "lxml==4.8.0",
]

[tool.setuptools]
packages = ["ppmi_downloader"]

[project.urls]
"Bug Tracker" = "https://github.com/LivingPark-MRI/ppmi-scraper/issues"
