[build-system]
requires = ["hatchling", "pathspec"]
build-backend = "hatchling.build"

[project]
name = "ppmi_downloader"
version = "0.7.5"
description = "A downloader of PPMI files."
authors = [{ name = "Tristan Glatard", email = "tristan.glatard@concordia.ca" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
license = { file = "LICENSE" }
dependencies = [
    "webdriver_manager>=4.0.0",
    "selenium",
    "icecream",
    "lxml",
    "tqdm",
    "beautifulsoup4",
    "pandas",
    "pathspec",
    "spython",
]

[project.scripts]
build_selenium = "ppmi_downloader.selenium_grid_utils:build"
run_selenium = "ppmi_downloader.selenium_grid_utils:run"


[project.urls]
"Bug Tracker" = "https://github.com/LivingPark-MRI/ppmi-scraper/issues"
